# echo-fastapi

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile.api  Dockerfile.bot  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routers/: __init__.py  health.py  media_items.py  reviews.py
app/db/: __init__.py  migrations.py  session.py
app/models/: __init__.py  media_item.py  review.py
app/schemas/: __init__.py  media_item.py  review.py
bot/: __init__.py  api_client.py  config.py  exceptions.py  keyboards.py  logging_config.py  main.py  rate_limiter.py  states.py
bot/handlers/: images.py  reviews.py  start.py
bot/i18n/: ru.py
bot/utils/: formatting.py
scripts/: deploy.sh
tests/: conftest.py  test_media_items.py  test_migrations.py  test_reviews.py
tests/bot/: test_api_client.py  test_formatting.py  test_handlers_reviews.py
