[project]
name = "echo-fastapi"
version = "0.1.0"
description = "A FastAPI application"
authors = [
    {name = "echo-fastapi",email = "echo-fastapi@example.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.124.4,<0.125.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
