[project]
name = "echo-fastapi"
version = "0.1.0"
description = "A FastAPI application"
authors = [
    {name = "echo-fastapi", email = "echo-fastapi@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "python-multipart>=0.0.20",
    "aiogram>=3.21.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.7.1",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
